<resources>
    <string name="app_name">دانشگاه</string>
    <string name="title_activity_login">Sign in</string>

    <string-array name="spinner_array">
        <item>دانشچو</item>
        <item>کارمند</item>
        <item>استاد</item>
        <item>مدیریت</item>
    </string-array>


    <string-array name="spinner_array1">
        <item>دانشچو</item>
        <item>کارمند</item>
        <item>استاد</item>
        <item>مدیریت</item>
    </string-array>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_course_info">CourseInfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="characteristic">مشخصه</string>
    <string name="amaliUnit">واحد عملی</string>
    <string name="theoriUnit">واحد تئوری</string>
    <string name="scaduling">زمان بندی</string>
    <string name="teacherName">نام استاد</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_success">اطلاعات ثبت شد</string>
    <string name="insert_fail">اشکال در ارسال اطلاعات</string>
    <string name="nationnalcode">۱۲۷۲۴۴۲۱۸۷</string>
    <string name="phonenumber">۰۹۳۶۸۴۲۲۱۳۳</string>
    <string name="fathername">صادق</string>
    <string name="major">مهندسی تکنولوژی نرم افزار</string>
    <string name="studentcode">۹۶۲۱۸۳۸۵۵</string>
    <string name="persian_username">نام کابری</string>
    <string name="persian_stucode">کد دانشجویی</string>
    <string name="persian_teachercode">کد استادی</string>
    <string name="persian_role">نقش</string>
    <string name="persian_nationalcode">کدملی</string>
    <string name="persian_phonenumber">تلفن همراه</string>
    <string name="persian_fathername">نام پدر</string>
    <string name="persina_stu">دانشجو</string>
    <string name="persina_teacher">استاد</string>
    <string name="unknown">نامشخص</string>
    <string name="persian_login_form"> ورود </string>
    <string name="general">General</string>
    <string name="setting">Setting</string>
    <string name="tools">tools</string>
    <string name="action_deleted"> درحال حذف درس ...</string>
    <string name="updating">بروز رسانی</string>
    <string name="help_text">راهنما</string>
    <string name="existstudnet">حضور دانشجو</string>
    <string name="notexist_student">عدم حضور دانشجو</string>
    <string name="not_set_studnet_attendancer">عدم اعلام حضور</string>
    <string name="insert">ثبت</string>


    <string name="hosts">http://192.168.56.1//khuisf/</string>
    <string name="host">http://mkabiri.ir/khuisf/</string>
    <string name="login_url">login.php</string>
    <string name="getTeachersForMessage">get_teachers_formessage.php</string>
    <string name="getMessageForStudent">get_messages_for_student.php</string>
    <string name="insertMessage">insert_message.php</string>
    <string name="insertMessageForStudent">insert_for_students_message.php</string>
    <string name="getStudentForMessageByCourse">get_students_formessage_bycourse.php</string>
    <string name="getStudentForMessage">get_students_formessage.php</string>
    <string name="getAttendancer">get_attendancer.php</string>
    <string name="insertAttendancer">insert_attendancer.php</string>
    <string name="deleteCourse">delete_courses.php</string>
    <string name="selectCourse">select_courses.php</string>
    <string name="getSelectedCourses">get_selected_courses.php</string>
    <string name="setScore">insert_score.php</string>
    <string name="getScore">get_courses_score.php</string>
    <string name="getCourseInfo">get_courses_info.php</string>
    <string name="getInfo">get_info.php</string>
    <string name="getCourseTeacher">get_courses_forteacher.php</string>
    <string name="getStudent">get_students.php</string>
    <string name="getCourses">get_courses.php</string>
    <string name="getCoursesday">get_courses_day.php</string>
    <string name="checkPhoneNumberForSms">checkPhoneNumberForSms.php</string>
    <string name="genetareCodeForsms">generateCodeSendSms.php</string>
    <string name="changePass">ChangePass.php</string>
    <string name="insertCheshmakId">InsertCheshmakId.php</string>
    <string name="getNationalCode">getNationalCode.php</string>
    <string name="contactUs_url">contact_us.php</string>
    <string name="blockUser_url">BlockUser.php</string>


    <string name="ok">ok</string>
    <string name="empty_text">متن پیام نمی تواند خالی باشد</string>


    <string name="key_cheshmak">tAnvYBWkghIb388FEGI1PQ==</string>
    <string name="weekly_plan">برنامه هفتگی</string>
    <string name="attendancer">حضور وغیاب</string>
    <string name="connections">ارتباطات</string>
    <string name="select_score">انتخاب واحد</string>
    <string name="delete_course">حذف و اضافه</string>
    <string name="noifications">اعلانات</string>
    <string name="weekly_plan_des">نمایش برنامه هفتگی و اطلاعات دروس</string>
    <string name="attendancer_des">ثبت حضور وغیاب توسط اساتید و مشاهده توسط دانشجویان</string>
    <string name="connections_des">ارتباط میان دانشجویان و اساتید</string>
    <string name="select_courses_des">انتخاب درس و لیست دروس ارائه شده</string>
    <string name="deletecourse_des">حذف دروس "</string>
    <string name="notify_des">اطلاع رسانی هدفمند</string>
    <string name="recover_pass_presian">بازیابی رمزعبور</string>
    <string name="insert_phone_number">شماره همراه خود را وارد کنید</string>
    <string name="instert_national_code">کد ملی خود را وارد کنید</string>
    <string name="access_to_simcard">آیا به این سیمکارت دسترسی دارید؟</string>
    <string name="phone_number_not_found">شماره ای پیدا نشد</string>
    <string name="insert_national_code">کدملی خود را وارد کنید</string>
    <string name="if_not_recive_sms">اگر کد را دریافت نکرده اید اینجا کلیک کنید</string>
    <string name="check_internet_connection_presian">اینترنت دستگاه را برسی کنید</string>
    <string name="insert_compalate_code">کد را کامل وارد کنید</string>
    <string name="sending_sms">درحال ارسال پیامک ...</string>
    <string name="moving_to_change_pass_ac">در حال انتقال به صفخه تغییر پسورد</string>
    <string name="password_changed">رمز عبور با موفقیت تغییر پیدا</string>
    <string name="password_not_changed">رمز عبور تغییر نکرد</string>
    <string name="your_entered">شماوارد شدید</string>
    <string name="wrong_code">کد شما اشتباه است</string>
    <string name="network_err">ایراد در شبکه</string>
    <string name="wrong_user_pass">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="contact_with_support">ارتباط با پشتیبانی</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="yout_message_sended"> پیام شما با موفقیت ارسال شد </string>
    <string name="account_blocked">حساب کاربری شما مسدود شد</string>
    <string name="sendMessage">آیاپیام را ارسال می کنید؟</string>
    <string name="forgeted_my_pas">رمز عبور خود را فراموش کرده ام</string>
    <string name="monday">دوشنبه</string>
    <string name="wednesday">چهارشنبه</string>
    <string name="tuesday">سه شنبه</string>
    <string name="sunday">یکشنبه</string>
    <string name="saturday">شنبه</string>
    <string name="friday">جمعه</string>
    <string name="thursday">پنجشنبه</string>
    <string name="fail_get_plan">"ایراد در دریافت برنامه "</string>
    <string name="for_edit_hold">برای ویرایش نگه دارید</string>

</resources>
